<resources>
    <string name="app_name">MobileHero</string>

    <!-- Français -->
    <string name="title_activity_games">Gestion des jeux</string>
    <string name="newGame">Nouveau Jeu</string>

    <string name="title_activity_new_game">Nouveau jeu</string>
    <string name="gameName">Entrez le nom du jeu</string>

    <string name="title_activity_rounds">Gestion des parties</string>
    <string name="newRound">Nouvelle partie</string>

    <string name="title_activity_new_round">Nouvelle partie</string>
    <string name="roundName">Entrez le nom de la partie</string>

    <string name="title_activity_characters">Gestion des personnages</string>
    <string name="newPersonnage">Nouveau personnage</string>

    <string name="title_activity_new_character">Nouveau personnage</string>
    <string name="characteristics">Caractéristiques</string>
    <string name="skill">Compétences</string>
    <string name="equipment">Equipement</string>
    <string name="save">Sauvegarder</string>

    <string name="level">Niveau</string>
    <string name="name">Saisir un nom</string>
    <string name="sex">Saisir un sexe</string>
    <string name="race">Saisir une race</string>
    <string name="className">Saisir une classe</string>
    <string name="alignment">Saisir un alignement</string>

    <string name="nameLabel">Nom</string>
    <string name="descriptionLabel">Desc.</string>
    <string name="valueLabel">Valeur</string>
    <string name="weightLabel">Poids</string>
    <string name="positionLabel">Pos.</string>
    <string name="characLabel">Carac.</string>
    <string name="value">Saisir une valeur</string>

    <string name="sexLabel">Sexe</string>
    <string name="raceLabel">Race</string>
    <string name="classNameLabel">Classe</string>
    <string name="alignmentLabel">Karma</string>
    <string name="lifeLabel">Vie</string>
    <string name="manaLabel">Mana</string>

    <string name="addCharacteristic">Ajouter une caractéristique</string>
    <string name="addEquipment">Ajouter un équipement</string>
    <string name="addSkill">Ajouter une compétence</string>

    <string name="title_activity_dices">Lancer de dés</string>
    <string name="nbDices">Nombre de dés</string>
    <string name="nbSides">Nombre de faces</string>
    <string name="roll">Roll</string>

    <string name="action_settings_dices">Lancer les dés</string>

    <string name="attributeDescription">Saisir une description</string>
    <string name="characteristicName">Entrer un nom</string>
    <string name="characteristicValue">Saisir une valeur</string>

    <string name="equipmentName">Entrer le nom de l\'équipement</string>
    <string name="equipmentValue">Saisir un poids</string>
    <string name="equipmentLocation">Saisir une position</string>

    <string name="skillName">Entrer le nom de la compétence</string>
    <string name="skillValue">Saisir une valeur</string>

    <string name="attributes">Attributs</string>
    <string name="click">Cliquer pour continuer</string>
    <string name="title_activity_attributes">Attributs de personnage</string>
    <string name="addEffect">Ajouter un effet</string>
    <string name="newEffect">Nouvel effet</string>
    <string name="effectLabel">Effet</string>

    <string name="action_settings_loadmodel">Charger un modèle</string>
    <string name="action_settings_saveasmodel">Sauvegarder en tant que modèle</string>
    <string name="toastCharSavedAsModel">Personnage sauvegardé en tant que modèle.</string>
    <string name="toastNonFiledForm">Le formulaire n\'est pas correctement rempli.</string>
    <string name="toastCannotDeleteGame">"Vous ne pouvez pas supprimer un jeu qui contient des parties."</string>
    <string name="toastCannotDeleteRound">"Vous ne pouvez pas supprimer une partie qui contient des personnages."</string>
    <string name="toastNoSelectedCharacteristic">Aucune caractéristique séléctionnée.</string>
    <string name="toastNoSelectedValue">Aucune valeur séléctionnée.</string>
    <string name="toastTypeACharacterName">Veuillez saisir un nom pour votre personnage.</string>
    <string name="toastCharacteristicAlreadyExists">La caractéristique existe déjà ou les champs ne sont pas bien remplis.</string>
    <string name="toastDeleteEffectsFirst">Supprimez d\'abord les effets qui utilisent la caractéristique.</string>
    <string name="toastSkillAlreadyExists">La compétence existe déjà ou les champs ne sont pas bien remplis.</string>
    <string name="characterModelSelection">Séléction d\'un modèle de perso.</string>
    <string name="action_settings_exportpdf">Exporter en PDF</string>
    <string name="enter_link">Entrez le lien vers l\'avatar</string>
    <string name="character_image">Selection avatar</string>
    <string name="character_image_error">Impossible de charger l\'image du personnage</string>
    <string name="action_settings_exportzip">Exporter en ZIP</string>
    <string name="toastRoundExportZipError">Erreur lors de l\'export du personnage en ZIP</string>
    <string name="action_import_zip">Importer un fichier ZIP</string>
    <string name="toastRoundNoZipReader">Le fichier a été exporté à l\'emplacement suivant</string>
    <string name="toastImportZipError">Erreur lors de l\'import du fichier ZIP</string>
    <string name="toastInstallFileManager">Veuillez installer un gestionnaire de fichiers</string>
    <string name="titleSelectFileToUpload">Selectionnez un fichier à importer</string>

</resources>
