<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kei.mobilehero.activities.character.CharacterFormActivity">
    <item android:id="@+id/action_dices" android:title="@string/action_settings_dices"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_saveAsModel" android:title="@string/action_settings_saveasmodel"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_loadModel" android:title="@string/action_settings_loadmodel"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exportpdf" android:title="@string/action_settings_exportpdf"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
