<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="kei.mobilehero.fragments.EquipmentFormFragment"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@xml/radius"
            android:id="@+id/relativeLayout2_fragment_new_equipment">

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:maxLength="50"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_equipmentName_new_equipment"
                android:hint="@string/equipmentName"
                android:textColor="#ffffffff"
                android:textColorHint="#FF9B9B9B"
                android:gravity="center_horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_toRightOf="@+id/textView_value_equipment"
                android:layout_toEndOf="@+id/textView_value_equipment" />

            <EditText
                android:maxLength="50"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_equipmentDescription_new_equipment"
                android:hint="@string/attributeDescription"
                android:textColor="#ffffffff"
                android:textColorHint="#FF9B9B9B"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_below="@+id/editText_equipmentName_new_equipment"
                android:layout_alignLeft="@+id/editText_equipmentName_new_equipment"
                android:layout_alignStart="@+id/editText_equipmentName_new_equipment"
                android:layout_alignRight="@+id/editText_equipmentName_new_equipment"
                android:layout_alignEnd="@+id/editText_equipmentName_new_equipment" />

            <EditText
                android:layout_marginTop="50dp"
                android:maxLength="6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText_equipmentValue_new_equipment"
                android:hint="@string/equipmentValue"
                android:textColor="#ffffffff"
                android:textColorHint="#FF9B9B9B"
                android:width="150dp"
                android:layout_below="@+id/editText_equipmentDescription_new_equipment"
                android:gravity="center"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_alignLeft="@+id/editText_equipmentDescription_new_equipment"
                android:layout_alignStart="@+id/editText_equipmentDescription_new_equipment"
                android:layout_alignRight="@+id/editText_equipmentDescription_new_equipment"
                android:layout_alignEnd="@+id/editText_equipmentDescription_new_equipment" />

            <EditText
                android:maxLength="50"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_equipmentPosition_new_equipment"
                android:hint="@string/equipmentLocation"
                android:textColor="#ffffffff"
                android:textColorHint="#FF9B9B9B"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:layout_below="@+id/editText_equipmentValue_new_equipment"
                android:layout_alignLeft="@+id/editText_equipmentValue_new_equipment"
                android:layout_alignStart="@+id/editText_equipmentValue_new_equipment"
                android:layout_alignRight="@+id/editText_equipmentValue_new_equipment"
                android:layout_alignEnd="@+id/editText_equipmentValue_new_equipment" />

            <kei.mobilehero.custom.widgets.MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nameLabel"
                android:id="@+id/textView_name_equipment"
                android:textColor="#c8ffffff"
                android:textSize="25sp"
                android:layout_alignTop="@+id/editText_equipmentName_new_equipment"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"/>

            <kei.mobilehero.custom.widgets.MyCustomTextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/descriptionLabel"
                android:id="@+id/textView_description_equipment"
                android:textColor="#c8ffffff"
                android:textSize="25sp"
                android:layout_alignTop="@+id/editText_equipmentDescription_new_equipment"
                android:layout_alignLeft="@+id/textView_name_equipment"
                android:layout_alignStart="@+id/textView_name_equipment" />

            <kei.mobilehero.custom.widgets.MyCustomTextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/weightLabel"
                android:id="@+id/textView_value_equipment"
                android:textColor="#c8ffffff"
                android:textSize="25sp"
                android:layout_alignTop="@+id/editText_equipmentValue_new_equipment"
                android:layout_alignLeft="@+id/textView_name_equipment"
                android:layout_alignStart="@+id/textView_name_equipment" />

            <kei.mobilehero.custom.widgets.MyCustomTextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/positionLabel"
                android:id="@+id/textView_location_equipment"
                android:textColor="#c8ffffff"
                android:textSize="25sp"
                android:layout_alignTop="@+id/editText_equipmentPosition_new_equipment"
                android:layout_alignLeft="@+id/textView_name_equipment"
                android:layout_alignStart="@+id/textView_name_equipment" />


        </RelativeLayout>


        <kei.mobilehero.custom.widgets.MyCustomButton
            android:background="@drawable/button_large_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/button_saveEquipment_new_equipment"
            android:textColor="#e1000000"
            android:textSize="16sp"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/relativeLayout2_fragment_new_equipment"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <kei.mobilehero.custom.widgets.MyCustomButton
            android:layout_marginTop="50dp"
            android:background="@drawable/button_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addEffect"
            android:id="@+id/button_effects_new_equipment"
            android:textColor="#e1000000"
            android:textSize="14sp"
            android:layout_below="@+id/button_saveEquipment_new_equipment"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView_effects_equipment"
            android:background="@xml/custom_listview_2"
            android:layout_below="@+id/button_effects_new_equipment"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"/>
    </RelativeLayout>
</ScrollView>