
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="kei.mobilehero.activities.game.NewGameActivity"
        android:background="@drawable/mobile_orc">

        <kei.mobilehero.custom.widgets.MyCustomTextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_appName_new_game"
            android:textSize="@dimen/app_name_size"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffffff"/>

        <EditText
            android:maxLength="50"
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_gameName_new_game"
            android:hint="@string/gameName"
            android:textColor="#ffffffff"
            android:textColorHint="#FF9B9B9B"
            android:gravity="center_horizontal"
            android:layout_below="@+id/label_appName_new_game"
            android:layout_alignRight="@+id/label_appName_new_game"
            android:layout_alignEnd="@+id/label_appName_new_game"
            android:layout_alignLeft="@+id/label_appName_new_game"
            android:layout_alignStart="@+id/label_appName_new_game" />

        <kei.mobilehero.custom.widgets.MyCustomButton
            android:layout_marginTop="45dp"
            android:background="@drawable/button_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/button_saveGame_new_game"
            android:onClick="buttonOnClick"
            android:textColor="#e1000000"
            android:textSize="16sp"
            android:layout_below="@+id/editText_gameName_new_game"
            android:layout_alignLeft="@+id/editText_gameName_new_game"
            android:layout_alignStart="@+id/editText_gameName_new_game"
            android:layout_alignRight="@+id/editText_gameName_new_game"
            android:layout_alignEnd="@+id/editText_gameName_new_game" />

    </RelativeLayout>
